--- a/styles.css
+++ b/styles.css
@@ -6,24 +6,73 @@
 /*end reset*/
 
 html {
+  font-size: .75em;
   background: lightgray;
-  width: 100%;
+  width: 970px;
   height: 100%;
+  font-family: "Lucida Console", Monaco, monospace;
+  color: silver;
 }
 
 /*start body*/
-body {
-  text-align: center;
-}
+
 /*start header*/
 .header {
   margin:auto;
   width:98%;
-  height:100px;
+  height:50px;
   display:block;
   background: #1fad9f;
   margin-top:20px;
   margin-bottom: 20px;
+}
+
+.header-left {
+  /*background: green;*/
+  height:100%;
+  width: 30%;
+  display:inline-block;
+}
+.header-right {
+  float:right;
+  padding-top:15px;
+  padding-right:20px;
+  vertical-align: top;
+  height:100%;
+  /*background: orange;*/
+  text-align: right;
+  display:inline-block;
+
+}
+.header a {
+  /*font-sizem;*/
+  vertical-align: top;
+  color: white;
+}
+
+ul {
+  vertical-align: top;
+  text-align: right;
+  list-style-type: none;
+}
+
+li {
+  display:inline;
+}
+
+img {
+  margin:7px 0px 10px 10px;
+  max-height: 75%;
+  display:inline-block;
+}
+
+.header h1 {
+  width: 75%;
+  font-size:1.5em;
+  padding-top:0px;
+  vertical-align: top;
+  display:inline-block;
+  color: black;
 }
 /*end header*/
 
@@ -49,25 +98,46 @@ body {
 .content {
   width:65%;
   height:95%;
-  background: salmon;
+  /*background: salmon;*/
   display:inline-block;
   vertical-align: top;
 }
 
-.content div {
+.row{
   margin-bottom:33px;
   width:100%;
   height:30%;
-  background: orange;
+  /*background: orange;*/
   display:block;
   text-align: center;
 }
 
-.content div div {
-  width:25%;
+.first-row {
+  width:30%;
   height:100%;
-  background: green;
+  background: #244946;
   display: inline-block;
+}
+
+.second-row {
+  width:47%;
+  height:100%;
+  background: #244946;
+  display: inline-block;
+}
+
+.third-row {
+  width:100%;
+  height:100%;
+  background: #244946;
+  display: inline-block;
+}
+
+.left {
+  float:left;
+}
+.right {
+  float:right;
 }
 
 /*end main*/
@@ -76,11 +146,17 @@ body {
 .footer {
   margin:auto;
   width:98%;
-  height:100px;
+  height:80px;
   display:block;
   background: #1fad9f;
   margin-top:10px;
   margin-bottom: 20px;
+  text-align: center;
+}
+
+.footer p {
+  color:black;
+  padding-top:30px;
 }
 /*end footer */
 
