--- a/styles.css
+++ b/styles.css
@@ -58,6 +58,7 @@ ul {
 
 li {
   display:inline;
+  margin-left:5px;
 }
 
 img {
@@ -80,7 +81,7 @@ img {
 .main {
   margin:auto;
   width:98%;
-  height:700px;
+  height:500px;
   display:block;
   background: #ffe989;
   text-align: center;
@@ -92,12 +93,25 @@ img {
   width:23%;
   height:95%;
   background: #244946;
+  text-align: left;
   display:inline-block;
+}
+
+.main h1 {
+  margin-top:15px;
+  margin-left:5px;
+  font-size: 1.5em;
+  padding-left: 5px;
+}
+
+.main p {
+  margin-left: 15px;
+  margin-right: 15px;
 }
 
 .content {
   width:65%;
-  height:95%;
+  height:91%;
   /*background: salmon;*/
   display:inline-block;
   vertical-align: top;
@@ -117,6 +131,11 @@ img {
   height:100%;
   background: #244946;
   display: inline-block;
+  text-align: left;
+}
+
+.blue-text {
+  color: #1fad9f;
 }
 
 .second-row {
@@ -124,6 +143,7 @@ img {
   height:100%;
   background: #244946;
   display: inline-block;
+  text-align: left;
 }
 
 .third-row {
@@ -131,6 +151,7 @@ img {
   height:100%;
   background: #244946;
   display: inline-block;
+  text-align: left;
 }
 
 .left {
